--- a/Week44.Rmd
+++ b/Week44.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Week 44"
+title: "Week 44 Lecture 1"
 author: "562770bf"
 date: "2024-10-28"
 output: html_document
 ---
-This is the first Readme file for the Data Science and HR analytics course, trying out experiments on the code for week 44.
+This is the first Rmd file for the Data Science and HR analytics course, trying out experiments on the code for lecture 1 in week 44.
 
 So let's get started. 
 ```{r}
@@ -56,3 +56,8 @@ This command fits a regression model, depending on the data type of strategy) wh
 strategy is the dependent variable or outcome.Consultants and politicians are the independent variables.
 'Data=CEO_Diary' specifies that the data for this model comes from the CEO_Diary dataset.
 The glm term is a function for fitting generalized linear models, which includes a variety of model types (e.g., logistic regression for binary outcomes or linear regression for continuous outcomes).
+
+```{r}
+fit2 <- glm(strategy ~ govoff + unions, data=CEO_Diary); summary(fit2)
+```
+We get different estimates, both coefficients are now negative, but still small. However, hard to say anything useful here as there likely is no causal interpretation (significance of coefficients does not say that much about truth I think).
