--- a/Week47-Lecture6.Rmd
+++ b/Week47-Lecture6.Rmd
@@ -4,7 +4,7 @@ author: "562770bf"
 date: "2024-11-27"
 output: html_document
 ---
-This is the Readme file for the Data Science and HR analytics course, trying out experiments on the code for lecture 6.
+This is the Rmd file for the Data Science and HR analytics course, trying out experiments on the code for lecture 6.
 
 So let's get started. 
 ```{r}
